# reading-list-bot

./: Cargo.toml  config.toml
.github/workflows/: pr.yml
src/: main.rs
src/managers/: secrets.rs
src/services/: env.rs
