[package]
name = "reading-list-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
log = "0.4"
simple_logger = "1"
parking_lot = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }